--- a/css/style.css
+++ b/css/style.css
@@ -298,4 +298,19 @@ template {
 [hidden] {
   display: none; }
 
+html,
+body {
+  height: 100%; }
+
+.container {
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: 1180px;
+  padding: 0 10px; }
+
+.header {
+  height: 100%;
+  background: url("../img/header_bg.jpg") no-repeat 50% 50%;
+  background-size: cover; }
+
 /*# sourceMappingURL=style.css.map */
