logo and main menu

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,5 +1,20 @@
 <header class="header">
+  
   <div class="container">
-    
+    <div class="header__top">
+      <a href="./" class="header__logo">
+        <img src="./img/logo.png" alt="logo" class="header__logo-img">
+      </a>
+      <nav class="header__menu">
+        <a href="#" class="header__menu-item">About</a>
+        <a href="#" class="header__menu-item">How It Works</a>
+        <a href="#" class="header__menu-item">Services</a>
+        <a href="#" class="header__menu-item">FAQ</a>
+        <a href="#" class="header__menu-item">Contact</a>
+      </nav>
+      <div class="header__search">
+        
+      </div>
+    </div>
   </div>
 </header>
