--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -4,4 +4,65 @@
   height: 100%;
   background: url("../img/header_bg.jpg") no-repeat 50% 50%;
   background-size: cover;
+  position: relative;
+
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    top: 105px;
+    left: 0;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    @include box;
+  }
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 105px;
+  }
+
+  &__logo {
+    flex: 0 0 180px;
+    display: block;
+    
+    &-img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+  }
+
+  &__menu {
+    flex: 0 0 480px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 0.8125rem;
+    font-weight: 400;
+    line-height: 24px;
+
+    &-item {
+      color: #fff;
+      text-decoration: none;
+      position: relative;
+
+      &:after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 3px;
+        background-color: #fff;
+        top: 61px;
+        left: 50%;
+        transform: translateX(-50%) scale(0);
+        transition: 0.3s;
+      }
+
+      &:hover:after {
+        transform: translateX(-50%) scale(1);
+      }
+    }
+  }
 }
