main menu and search

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,9 +12,9 @@
         <a href="#" class="header__menu-item">FAQ</a>
         <a href="#" class="header__menu-item">Contact</a>
       </nav>
-      <div class="header__search">
-        
-      </div>
+      <label class="header__search">
+        <input type="search" name="search" id="search" class="header__search-field" placeholder="Search Website">
+      </label>
     </div>
   </div>
 </header>
