--- a/css/style.css
+++ b/css/style.css
@@ -336,16 +336,18 @@ body {
       height: auto;
       display: block; }
   .header__menu {
-    flex: 0 0 480px;
+    flex: 1 0 480px;
     display: flex;
-    justify-content: space-around;
+    justify-content: right;
     font-size: 0.8125rem;
     font-weight: 400;
-    line-height: 24px; }
+    line-height: 24px;
+    margin-right: 5px; }
     .header__menu-item {
       color: #fff;
       text-decoration: none;
-      position: relative; }
+      position: relative;
+      margin: 0 3.5%; }
       .header__menu-item:after {
         position: absolute;
         content: "";
@@ -360,5 +362,29 @@ body {
       .header__menu-item:hover:after {
         -webkit-transform: translateX(-50%) scale(1);
                 transform: translateX(-50%) scale(1); }
+  .header__search {
+    position: relative; }
+    .header__search-field {
+      flex: 0 0 220px;
+      height: 45px;
+      border-radius: 25px;
+      font-size: 12px;
+      font-weight: 400;
+      border: 1px solid #f2f2f2;
+      line-height: 4.625;
+      padding: 0 30px;
+      color: #626262;
+      box-sizing: border-box;
+      font-family: "Open Sans", sans-serif; }
+    .header__search:after {
+      content: "";
+      position: absolute;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+      top: 50%;
+      right: 15px;
+      width: 14px;
+      height: 14px;
+      background-image: url("../img/fa-search.png"); }
 
 /*# sourceMappingURL=style.css.map */
