--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -36,17 +36,19 @@
   }
 
   &__menu {
-    flex: 0 0 480px;
+    flex: 1 0 480px;
     display: flex;
-    justify-content: space-around;
+    justify-content: right;
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 24px;
+    margin-right: 5px;
 
     &-item {
       color: #fff;
       text-decoration: none;
       position: relative;
+      margin: 0 3.5%;
 
       &:after {
         position: absolute;
@@ -63,6 +65,35 @@
       &:hover:after {
         transform: translateX(-50%) scale(1);
       }
+    }
+  }
+
+  &__search {
+    position: relative;
+
+    &-field {
+      flex: 0 0 220px;
+      height: 45px;
+      border-radius: 25px;
+      font-size: 12px;
+      font-weight: 400;
+      border: 1px solid #f2f2f2;
+      line-height: 4.625;
+      padding: 0 30px;
+      color: $gray;
+      @include box;
+      @include openSans;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      transform: translateY(-50%);
+      top: 50%;
+      right: 15px;
+      width: 14px;
+      height: 14px;
+      background-image: url("../img/fa-search.png");
     }
   }
 }
