--- a/src/scss/partials/_var.scss
+++ b/src/scss/partials/_var.scss
@@ -1,5 +1,6 @@
 // variables
 
+$gray: #626262;
 
 //mixins
 
@@ -13,5 +14,5 @@
 
 @mixin openSans {
   font-family: "Open Sans", sans-serif;
-  
+
 }
