--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ body {
   .header__menu {
     flex: 1 0 480px;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 24px;
