--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -38,7 +38,7 @@
   &__menu {
     flex: 1 0 480px;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 24px;
