--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ body {
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 24px;
-    margin-right: 5px; }
+    margin: 15px; }
     .header__menu-item {
       color: #fff;
       text-decoration: none;
@@ -354,7 +354,7 @@ body {
         width: 100%;
         height: 3px;
         background-color: #fff;
-        top: 61px;
+        bottom: -40px;
         left: 50%;
         -webkit-transform: translateX(-50%) scale(0);
                 transform: translateX(-50%) scale(0);
