--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -42,7 +42,7 @@
     font-size: 0.8125rem;
     font-weight: 400;
     line-height: 24px;
-    margin-right: 5px;
+    margin: 15px;
 
     &-item {
       color: #fff;
@@ -56,7 +56,7 @@
         width: 100%;
         height: 3px;
         background-color: #fff;
-        top: 61px;
+        bottom: -40px;
         left: 50%;
         transform: translateX(-50%) scale(0);
         transition: 0.3s;
