--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,5 +1,4 @@
 <header class="header">
-  
   <div class="container">
     <div class="header__top">
       <a href="./" class="header__logo">
@@ -15,6 +14,9 @@
       <label class="header__search">
         <input type="search" name="search" id="search" class="header__search-field" placeholder="Search Website">
       </label>
+    </div>
+    <div class="header__bottom">
+      
     </div>
   </div>
 </header>
