--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -110,10 +110,17 @@
     line-height: 4.375rem;
   }
 
+  &__info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
   &__text {
     max-width: 230px;
     height: 13px;
     overflow: hidden;
     font-size: 12px;
+    margin: 18px 25px 0 0;
   }
 }
