--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -19,7 +19,7 @@ body {
   cursor: pointer;
   padding: 0;
   font: inherit;
-  width: 240px;
+  width: 280px;
   height: 60px;
   @include butShadow;
   border-radius: 30px;
@@ -27,6 +27,10 @@ body {
   font-size: 1.125rem;
   font-weight: 700;
   margin-top: 50px;
+
+  &:focus {
+    outline: none;
+  }
 
   &_velvet {
     background-color: $velvet;
