--- a/css/style.css
+++ b/css/style.css
@@ -427,4 +427,17 @@ body {
     font-size: 12px;
     margin: 18px 25px 0 0; }
 
+.features {
+  width: 100%;
+  position: relative;
+  background-color: #2e3b4e; }
+  .features:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    top: 0;
+    left: 0; }
+
 /*# sourceMappingURL=style.css.map */
