--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -20,7 +20,7 @@
         Designs your eyeballs will thank you for
       </div>
       <div class="header__info">
-        <button type="button" class="button button_velvet">
+        <button type="button" class="button button_velvet button-header">
           Get Started Today
         </button>
         <div class="header__text">
