--- a/css/style.css
+++ b/css/style.css
@@ -321,14 +321,22 @@ body {
   border-radius: 30px;
   color: #fff;
   font-size: 1.125rem;
-  font-weight: 700;
-  margin-top: 50px; }
+  font-weight: 700; }
   .button:focus {
     outline: none; }
   .button_velvet {
     background-color: #8824cd; }
     .button_velvet:hover {
       background-color: #9027d9; }
+  .button_white {
+    background-color: #fff;
+    color: #d54c63;
+    position: relative;
+    z-index: 30; }
+  .button-header {
+    margin-top: 50px; }
+  .button-pink {
+    margin: 15px 0; }
 
 .header {
   height: 100%;
@@ -431,7 +439,7 @@ body {
   width: 100%;
   position: relative;
   background-color: #2e3b4e; }
-  .features:before {
+  .features::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -439,5 +447,75 @@ body {
     background: rgba(255, 255, 255, 0.5);
     top: 0;
     left: 0; }
+  .features__container {
+    display: flex;
+    font-size: 0.937rem;
+    color: #fff;
+    line-height: 1.628;
+    width: 100%;
+    max-width: 820px;
+    flex-wrap: wrap;
+    padding: 35px 0 135px; }
+  .features__item {
+    max-width: 390px;
+    width: 100%;
+    margin: 35px 10px; }
+  .features__title {
+    font-weight: 700;
+    text-transform: uppercase; }
+  .features__text {
+    font-weight: 400;
+    max-height: 70px;
+    overflow: hidden; }
+  .features::after {
+    content: "";
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 141px;
+    height: 72px;
+    background: url("/img/feautures.png") no-repeat;
+    z-index: 50; }
+
+.pink {
+  position: relative;
+  z-index: 10;
+  background-color: #e7526b;
+  text-align: center;
+  padding: 145px 0 180px; }
+  .pink::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url("/img/forest.jpg") no-repeat 50% 50%;
+    background-size: cover;
+    opacity: 0.2;
+    z-index: 20; }
+  .pink__title {
+    padding: 10px 0;
+    text-align: center;
+    font-size: 2.187rem;
+    font-weight: 300;
+    color: #fff;
+    position: relative;
+    z-index: 30; }
+  .pink__text {
+    font-size: 0.937rem;
+    color: #fff;
+    font-weight: 400;
+    line-height: 1.625;
+    padding: 10px 0 15px;
+    max-width: 450px;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    z-index: 30; }
 
 /*# sourceMappingURL=style.css.map */
