--- a/src/scss/partials/_features.scss
+++ b/src/scss/partials/_features.scss
@@ -5,7 +5,7 @@
   position: relative;
   background-color: $blue;
 
-  &:before{
+  &::before{
     content: "";
     position: absolute;
     width: 100%;
@@ -15,5 +15,43 @@
     left: 0;
   }
 
+  &__container {
+    display: flex;
+    font-size: 0.937rem;
+    color: $white;
+    line-height: 1.628;
+    width: 100%;
+    max-width: 820px;
+    flex-wrap: wrap;
+    padding: 35px 0 135px;
+  }
 
+  &__item {
+    max-width: 390px;
+    width: 100%;
+    margin: 35px 10px;
+  }
+
+  &__title {
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    font-weight: 400;
+    max-height: 70px;
+    overflow: hidden;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 141px;
+    height: 72px;
+    background: url("/img/feautures.png") no-repeat;
+    z-index: 50;
+  }
 }
