--- a/css/style.css
+++ b/css/style.css
@@ -518,4 +518,43 @@ body {
     position: relative;
     z-index: 30; }
 
+.about {
+  width: 100%;
+  max-height: 495px;
+  height: 100%;
+  display: flex; }
+  .about__img {
+    width: 100%;
+    flex: 0 0 39%;
+    background: url("/img/about.jpg") no-repeat;
+    background-size: cover;
+    background-position: right 0px top 0px;
+    height: 100%; }
+  .about__article {
+    flex: 0 0 41%;
+    max-width: 660px;
+    margin-left: 100px;
+    padding: 95px 0;
+    color: #3a4d60;
+    font-size: 0.938rem;
+    font-weight: 400; }
+  .about__title {
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.45;
+    margin: 0;
+    padding: 0; }
+  .about__text {
+    line-height: 1.72;
+    margin: 0;
+    padding: 0;
+    padding-top: 35px;
+    max-height: 100px;
+    overflow: hidden; }
+    .about__text_big {
+      font-size: 1.188rem;
+      line-height: 1.6;
+      max-height: 120px;
+      overflow: hidden; }
+
 /*# sourceMappingURL=style.css.map */
