--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,18 @@ body {
   .button-pink {
     margin: 15px 0; }
 
+.info-button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; }
+
+.text_small {
+  max-width: 230px;
+  height: 13px;
+  overflow: hidden;
+  font-size: 12px;
+  margin: 18px 25px 0 0; }
+
 .header {
   height: 100%;
   background: url("../img/header_bg.jpg") no-repeat 50% 50%;
@@ -424,16 +436,6 @@ body {
   .header__title {
     font-size: 3.125rem;
     line-height: 4.375rem; }
-  .header__info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end; }
-  .header__text {
-    max-width: 230px;
-    height: 13px;
-    overflow: hidden;
-    font-size: 12px;
-    margin: 18px 25px 0 0; }
 
 .features {
   width: 100%;
