--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ body {
   width: 280px;
   height: 60px;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.4);
+  box-sizing: border-box;
   border-radius: 30px;
   color: #fff;
   font-size: 1.125rem;
@@ -341,7 +342,13 @@ body {
 .info-button {
   display: flex;
   flex-direction: column;
-  align-items: flex-end; }
+  align-items: flex-end;
+  color: #fff; }
+  .info-button_center {
+    align-items: center;
+    z-index: 30;
+    position: relative;
+    justify-content: center; }
 
 .text_small {
   max-width: 230px;
@@ -349,6 +356,8 @@ body {
   overflow: hidden;
   font-size: 12px;
   margin: 18px 25px 0 0; }
+  .text_small-center {
+    margin: 18px 0 0; }
 
 .header {
   height: 100%;
@@ -558,5 +567,52 @@ body {
       line-height: 1.6;
       max-height: 120px;
       overflow: hidden; }
+
+.experience {
+  width: 100%;
+  min-height: 550px;
+  background: url("/img/experience.jpg") 50% 50% no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; }
+  .experience-container {
+    padding: 60px 10px 0; }
+  .experience:after {
+    content: "";
+    position: absolute;
+    top: 95px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    background-color: rgba(82, 26, 102, 0.8); }
+  .experience__title {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5rem;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: -1px;
+    line-height: 1.2;
+    position: relative;
+    z-index: 30; }
+  .experience__text {
+    position: relative;
+    z-index: 30;
+    color: #a87bb7;
+    max-width: 735px;
+    width: 100%;
+    max-height: 65px;
+    overflow: hidden;
+    font-size: 1.25rem;
+    margin: 0;
+    padding: 20px 0 30px;
+    font-weight: 400;
+    letter-spacing: -0.2px;
+    line-height: 1.65; }
 
 /*# sourceMappingURL=style.css.map */
