--- a/src/scss/partials/_experience.scss
+++ b/src/scss/partials/_experience.scss
@@ -1,2 +1,58 @@
 @import 'var';
 
+.experience {
+  width: 100%;
+  min-height: 550px;
+  background: url("/img/experience.jpg") 50% 50% no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  &-container {
+    padding: 60px 10px 0;
+  }
+
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 95px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
+    background-color: rgba(82, 26, 102, 0.8);
+  }
+
+  &__title {
+    margin: 0;
+    padding: 0;
+    font-size: 2.5rem;
+    color: $white;
+    font-weight: 300;
+    letter-spacing: -1px;
+    line-height: 1.2;
+    position: relative;
+    z-index: 30;
+  }
+
+  &__text {
+    position: relative;
+    z-index: 30;
+    color: $purple;
+    max-width: 735px;
+    width: 100%;
+    max-height: 65px;
+    overflow: hidden;
+    font-size: 1.25rem;
+    margin: 0;
+    padding: 20px 0 30px;
+    font-weight: 400;
+    letter-spacing: -0.2px;
+    line-height: 1.65;
+  }
+}
