--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -22,6 +22,7 @@ body {
   width: 280px;
   height: 60px;
   @include butShadow;
+  @include box;
   border-radius: 30px;
   color: $white;
   font-size: 1.125rem;
@@ -59,6 +60,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  color: $white;
+
+  &_center {
+    align-items: center;
+    z-index: 30;
+    position: relative;
+    justify-content: center;
+  }
 }
 
 .text_small {
@@ -67,4 +76,8 @@ body {
   overflow: hidden;
   font-size: 12px;
   margin: 18px 25px 0 0;
+
+  &-center {
+    margin: 18px 0 0;
+  }
 }
