--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,6 +1,6 @@
 <section class="about">
-  <div class="about__img"></div>
-  <article class="about__article">
+  <div class="about__img about__img_left"></div>
+  <article class="about__article about__article_right">
     <h3 class="about__title">
         A heading is what you need here
     </h3>
