--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -6,7 +6,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit
       </div>
       <div class="article__author">
-        <div class="article_photo"></div>
+        <div class="article__photo"></div>
         <div class="article__name">
           Blaz Robar, god like web designer
         </div>
