--- a/css/style.css
+++ b/css/style.css
@@ -543,22 +543,35 @@ body {
   width: 100%;
   max-height: 495px;
   height: 100%;
-  display: flex; }
+  display: flex;
+  position: relative;
+  overflow: hidden; }
+  .about_right::before {
+    content: "";
+    position: absolute;
+    left: 58%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: url("/img/about_right.jpg") no-repeat;
+    background-size: cover; }
   .about__img {
     width: 100%;
-    flex: 0 0 39%;
-    background: url("/img/about.jpg") no-repeat;
     background-size: cover;
-    background-position: right 0px top 0px;
     height: 100%; }
+    .about__img_left {
+      background-position: right 0px top 0px;
+      background: url("/img/about.jpg") no-repeat;
+      flex: 0 0 39%; }
   .about__article {
     flex: 0 0 41%;
     max-width: 660px;
-    margin-left: 100px;
     padding: 95px 0;
     color: #3a4d60;
     font-size: 0.938rem;
     font-weight: 400; }
+    .about__article_right {
+      margin-left: 100px; }
   .about__title {
     text-transform: uppercase;
     font-weight: 700;
@@ -630,7 +643,9 @@ body {
   min-height: 670px;
   background: url("/img/article.jpg") no-repeat 50% 50%;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  display: flex;
+  align-items: flex-end; }
   .article:after {
     content: "";
     position: absolute;
@@ -642,8 +657,29 @@ body {
   .article__post {
     position: relative;
     z-index: 30;
+    padding-bottom: 90px;
+    width: 100%;
+    max-width: 520px; }
+  .article__text {
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 1.25;
+    color: #fff;
+    padding: 25px 0; }
+  .article__author {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end; }
+    align-items: center; }
+  .article__photo {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background: url("/img/author_photo.png") 50% 50% no-repeat;
+    background-size: cover; }
+  .article__name {
+    color: #fff;
+    font-size: 0.8125rem;
+    font-weight: 400;
+    padding: 0 15px; }
 
 /*# sourceMappingURL=style.css.map */
