--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -6,6 +6,8 @@
   background: url("/img/article.jpg") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
+  display: flex;
+  align-items: flex-end;
 
   &:after {
     content: "";
@@ -20,8 +22,37 @@
   &__post {
     position: relative;
     z-index: 30;
+    padding-bottom: 90px;
+    width: 100%;
+    max-width: 520px;
+  }
+
+  &__text {
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 1.25;
+    color: $white;
+    padding: 25px 0;
+  }
+
+  &__author {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
+  }
+
+  &__photo {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    @include box;
+    background: url("/img/author_photo.png") 50% 50% no-repeat;
+    background-size: cover;
+  }
+
+  &__name {
+    color: $white;
+    font-size: 0.8125rem;
+    font-weight: 400;
+    padding: 0 15px;
   }
 }
