--- a/src/templates/contacts.html
+++ b/src/templates/contacts.html
@@ -6,6 +6,6 @@
     <div class="contacts__text">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     </div>
-      <a href="mailto:help@yomuma.com" class="">help@yomuma.com</a>
+      <a href="mailto:help@yomuma.com" class="contacts__mail">help@yomuma.com</a>
   </div>
 </section>
