--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer">
   <div class="container">
-    
+    <div class="footer__text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eveniet voluptas corrupti, neque debitis pariatur rerum architecto, officia, nesciunt laudantium sunt hic ipsam doloribus? Consequatur, consectetur rem? Qui inventore omnis natus tempora blanditiis quasi rerum eligendi, voluptatum reiciendis. Mollitia deleniti debitis repellat pariatur delectus explicabo maxime! Ea doloribus tempora veritatis?
+    </div>
   </div>
 </footer>
