--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,8 @@ h3 {
     width: 100%;
     max-width: 820px;
     flex-wrap: wrap;
-    padding: 35px 0 135px; }
+    padding: 35px 0 135px;
+    justify-content: center; }
   .features__item {
     max-width: 390px;
     width: 100%;
@@ -550,6 +551,16 @@ h3 {
   display: flex;
   position: relative;
   overflow: hidden; }
+  .about_left::before {
+    content: "";
+    position: absolute;
+    right: 60%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: url("/img/about.jpg") no-repeat;
+    background-position: 0% 50%;
+    background-size: cover; }
   .about_right::before {
     content: "";
     position: absolute;
@@ -558,15 +569,8 @@ h3 {
     right: 0;
     bottom: 0;
     background: url("/img/about_right.jpg") no-repeat;
+    background-position: right 0% top 50%;
     background-size: cover; }
-  .about__img {
-    width: 100%;
-    background-size: cover;
-    height: 100%; }
-    .about__img_left {
-      background-position: right 0px top 0px;
-      background: url("/img/about.jpg") no-repeat;
-      flex: 0 0 39%; }
   .about__article {
     flex: 0 0 41%;
     max-width: 660px;
@@ -575,7 +579,7 @@ h3 {
     font-size: 0.938rem;
     font-weight: 400; }
     .about__article_right {
-      margin-left: 100px; }
+      margin-left: 44%; }
   .about__title {
     text-transform: uppercase;
     font-weight: 700;
@@ -640,7 +644,8 @@ h3 {
     padding: 20px 0 30px;
     font-weight: 400;
     letter-spacing: -0.2px;
-    line-height: 1.65; }
+    line-height: 1.65;
+    margin: 0 auto; }
 
 .article {
   width: 100%;
@@ -706,5 +711,17 @@ h3 {
     color: #fff;
     padding-top: 30px;
     display: inline-block; }
+
+.footer {
+  width: 100%;
+  min-height: 370px;
+  background-color: #2e3b4e;
+  color: #fff; }
+  .footer__text {
+    max-width: 660px;
+    overflow: hidden;
+    height: 15px;
+    font-size: 0.75rem;
+    padding: 45px 0 0; }
 
 /*# sourceMappingURL=style.css.map */
