--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -8,6 +8,21 @@
   position: relative;
   overflow: hidden;
 
+  &_left {
+
+    &::before{
+      content: "";
+      position: absolute;
+      right: 60%;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      background: url("/img/about.jpg") no-repeat;
+      background-position: 0% 50%;
+      background-size: cover;
+    }
+  }
+
   &_right {
 
     &::before {
@@ -18,19 +33,8 @@
       right: 0;
       bottom: 0;
       background: url("/img/about_right.jpg") no-repeat;
+      background-position: right 0% top 50%;
       background-size: cover;
-    }
-  }
-
-  &__img {
-    width: 100%;
-    background-size: cover;
-    height: 100%;
-
-    &_left {
-      background-position: right 0px top 0px;
-      background: url("/img/about.jpg") no-repeat;
-      flex: 0 0 39%;
     }
   }
 
@@ -43,7 +47,7 @@
     font-weight: 400;
 
     &_right {
-      margin-left: 100px;
+      margin-left: 44%;
     }
   }
 
