--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,2 +1,16 @@
 @import "var";
 
+.footer {
+  width: 100%;
+  min-height: 370px;
+  background-color: $blue;
+  color: $white;
+
+  &__text {
+    max-width: 660px;
+    overflow: hidden;
+    height: 15px;
+    font-size: 0.75rem;
+    padding: 45px 0 0;
+  }
+}
