--- a/src/scss/partials/_media.scss
+++ b/src/scss/partials/_media.scss
@@ -3,42 +3,43 @@
 @media (max-width: 950px) {
 
   .header {
+
+    &__hamb {
+      display: flex;
+      position: absolute;
+      content: "";
+      top: 50%;
+      right: 0;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      transform: translateY(-50%);
+      background:
+      linear-gradient(
+        0deg,
+        rgba(white, 0) 0%,
+        rgba(white, 1) 0%,
+        rgba(white, 1) 16%,
+        rgba(white, 0) 16%
+      ),
+      linear-gradient(
+        0deg,
+        rgba(white, 0) 42%,
+        rgba(white, 1) 42%,
+        rgba(white, 1) 58%,
+        rgba(white, 0) 58%
+      ),
+      linear-gradient(
+        0deg,
+        rgba(white, 0) 84%,
+        rgba(white, 1) 84%,
+        rgba(white, 1) 100%,
+        rgba(white, 0) 100%
+      );
+    }
     
     &__top {
       position: relative;
-
-      &::before {
-        position: absolute;
-        content: "";
-        top: 50%;
-        right: 0;
-        width: 40px;
-        height: 40px;
-        cursor: pointer;
-        transform: translateY(-50%);
-        background:
-        linear-gradient(
-          0deg,
-          rgba(white, 0) 0%,
-          rgba(white, 1) 0%,
-          rgba(white, 1) 16%,
-          rgba(white, 0) 16%
-        ),
-        linear-gradient(
-          0deg,
-          rgba(white, 0) 42%,
-          rgba(white, 1) 42%,
-          rgba(white, 1) 58%,
-          rgba(white, 0) 58%
-        ),
-        linear-gradient(
-          0deg,
-          rgba(white, 0) 84%,
-          rgba(white, 1) 84%,
-          rgba(white, 1) 100%,
-          rgba(white, 0) 100%
-        );
-      }
     }
 
     &__menu {
@@ -46,10 +47,10 @@
       position: absolute;
       right: -10px;
       top: 0;
-      width: 50%;
+      width: 60%;
       flex-direction: column;
-      height: 35vh;
-      justify-content: flex-start;
+      height: 50vh;
+      justify-content: space-between;
       align-items: center;
       padding: 30px 20px;
       margin: 0;
@@ -57,14 +58,19 @@
       background-color: $blue;
       z-index: 50;
 
-      &::before {
-        content: "\2716";
+      &-close {
+        display: block;
         color: $white;
         font-size: 2.5em;
         position: absolute;
         top: 15px;
         right: 15px;
         cursor: pointer;
+        transition: .3s;
+
+        &:hover {
+          transform: rotate(90deg);
+        }
       }
 
       &-item {
