--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -10,10 +10,12 @@
         <a href="#" class="header__menu-item">Services</a>
         <a href="#" class="header__menu-item">FAQ</a>
         <a href="#" class="header__menu-item">Contact</a>
+        <div class="header__menu-close">&#10006;</div>
       </nav>
       <label class="header__search">
         <input type="search" name="search" id="search" class="header__search-field" placeholder="Search Website">
       </label>
+      <div class="header__hamb"></div>
     </div>
     <div class="header__bottom">
       <div class="header__title">
