--- a/src/scss/partials/_pink.scss
+++ b/src/scss/partials/_pink.scss
@@ -14,7 +14,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background:  url("/img/forest.jpg") no-repeat 50% 50%;
+    background:  url("../img/forest.jpg") no-repeat 50% 50%;
     background-size: cover;
     opacity: 0.2;
     z-index: 20;
