--- a/src/scss/partials/_about.scss
+++ b/src/scss/partials/_about.scss
@@ -17,7 +17,7 @@
       top: 0;
       left: 0;
       bottom: 0;
-      background: url("/img/about.jpg") no-repeat;
+      background: url("../img/about.jpg") no-repeat;
       background-position: 0% 50%;
       background-size: cover;
     }
@@ -32,7 +32,7 @@
       top: 0;
       right: 0;
       bottom: 0;
-      background: url("/img/about_right.jpg") no-repeat;
+      background: url("../img/about_right.jpg") no-repeat;
       background-position: right 0% top 50%;
       background-size: cover;
     }
