--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -3,7 +3,7 @@
 .article {
   width: 100%;
   min-height: 670px;
-  background: url("/img/article.jpg") no-repeat 50% 50%;
+  background: url("../img/article.jpg") no-repeat 50% 50%;
   background-size: cover;
   position: relative;
   display: flex;
@@ -45,7 +45,7 @@
     height: 45px;
     border-radius: 50%;
     @include box;
-    background: url("/img/author_photo.png") 50% 50% no-repeat;
+    background: url("../img/author_photo.png") 50% 50% no-repeat;
     background-size: cover;
   }
 
