--- a/src/scss/partials/_experience.scss
+++ b/src/scss/partials/_experience.scss
@@ -3,7 +3,7 @@
 .experience {
   width: 100%;
   min-height: 550px;
-  background: url("/img/experience.jpg") 50% 50% no-repeat;
+  background: url("../img/experience.jpg") 50% 50% no-repeat;
   background-size: cover;
   position: relative;
   z-index: 10;
